--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -17,21 +17,21 @@
 }
 
 .icon--phone {
-  background-image: url(/icons/phone-call2.png);
+  background-image: url(../icons/phone-call2.png);
   height: 35px;
   width: 30px;
 
 }
 
 .icon--menu {
-  background-image: url(/icons/icon-burger-menu.svg);
+  background-image: url(../icons/icon-burger-menu.svg);
 
   height: 35px;
   width: 43px;
 }
 
 .icon--close {
-  background-image: url(/Photo/close.svg);
+  background-image: url(../Photo/close.svg);
 
   height: 30px;
   width: 30px;
@@ -40,7 +40,7 @@
 }
 
 .icon--galochka {
-  background-image: url(/Photo/galochka-White.svg);
+  background-image: url(../Photo/galochka-White.svg);
   margin-bottom: 3px;
   height: 25px;
   width: 25px;
